force-app/main/default/objects/Object_Mandatory_Field__mdt/Object_Mandatory_Field__mdt.object-meta.xml
<CustomObject>
    <label>Object Mandatory Field</label>
    <pluralLabel>Object Mandatory Fields</pluralLabel>
</CustomObject>