force-app/main/default/objects/Object_Mandatory_Field__mdt/fields/is_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>is_Key_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Key Field</label>
    <type>Checkbox</type>
</CustomField>