force-app/main/default/objects/Object_Mandatory_Field__mdt/fields/Possible_Values__c.field-meta.xml
<CustomField>
    <fullName>Possible_Values__c</fullName>
    <description>If pick type selected, please provide some pick list values
e.g. Case.Status, Values will be New#Closed#Assigned etc</description>
    <label>Possible Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>