force-app/main/default/objects/Object_Mandatory_Field__mdt/fields/Reference_Object__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object__c</fullName>
    <label>Reference Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>