force-app/main/default/objects/Object_Mandatory_Field__mdt/fields/SObjectField_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>SObjectField_Api_Name__c</fullName>
    <label>SObjectField Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>